--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
             <polyline points="14,10 8,16 14,22" fill="none" stroke="#000" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
         </span>
-        
+
         <img id="logo" src="{{ url_for('static', filename='logo.png') }}" alt="Logo do sistema">
 
         <div class="arraste" id="dropzone">
@@ -27,7 +27,7 @@
             <img src="{{ url_for('static', filename='check.png') }}" alt="Arquivo selecionado" class="pdf-icon" id="check-img" style="display:none;">
             <p id="texto-arraste" style="font-weight: 600; margin-top: -10px;">ARRASTE AQUI</p>
             <div id="arquivo-info" style="display:none;" class="arquivo-info">
-                <img src="{{ url_for('static', filename='x.png') }}" alt="Erro" id="erro-img" style="display:none; width:24px; height:24px;">
+                <img src="{{ url_for('static', filename='X.png') }}" alt="Erro" id="erro-img" style="display:none; width:24px; height:24px;">
                 <span id="nome-arquivo"></span>
                 <p id="msg-erro" style="display:none; font-weight: bold; color: white;">Formato inválido</p>
             </div>
